:sparkles: 2_2_livraria_mvc: Create database connection on src/config

--- a/2_2_livraria_MVC/.env
+++ b/2_2_livraria_MVC/.env
@@ -1,1 +1,6 @@
 PORT = 2024
+MYSQL_HOST = localhost
+MYSQL_USER = root
+MYSQL_PASSWORD = Sen@iDev77!.
+MYSQL_DATABASE = livraria_mvc
+MYSQL_PORT = 3306
