:wrench: 2_2_livraria_mvc: Reformat main path at package.json

--- a/2_2_livraria_MVC/package.json
+++ b/2_2_livraria_MVC/package.json
@@ -2,7 +2,7 @@
   "name": "2_2_livraria_mvc",
   "version": "1.0.0",
   "description": "",
-  "main": "src/server.js",
+  "main": "./src/server.js",
   "type": "module",
   "scripts": {
     "dev": "nodemon ./src/server.js",
